<resources>
    <string name="app_name">Doc App</string>
    <string name="first_name_label">First Name: </string>
    <string name="last_name_label">Last Name: </string>
    <string name="location_label">Location: </string>
    <string name="city_label">City: </string>
    <string name="doc_name">Doctor\'s Name:</string>
    <string name="appt_date">Appointment Date:</string>
    <string name="appt_time">Appointment Time:</string>
    <string name="notes">Notes:</string>
    <string name="last_name_search">Last Name Search</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="appointment">appointments</string>
    <string name="find_a_doctor">find a doctor</string>
    <string name="drugs">drug info</string>
</resources>
